--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "MyApp",
   "version": "1.0.0",
-  "main": "server/index.js",
+  "main": "app.js",
   "repository": "",
   "license": "MIT",
   "private": true,
@@ -9,25 +9,26 @@
   "engines": {
     "node": ">=0.10.0"
   },
-  "main": "app.js",
   "scripts": {
     "start": "./node_modules/.bin/nodemon server/index.js --ignore client/ --ignore node_modules/",
-    "test": "karma start --browsers PhantomJS",
-      "test": "./test/run.sh"
+    "test": "./test/run.sh"
   },
   "dependencies": {
-    "express": "^4.13.1",
-    "body-parser": "^1.14.1",
-    "nodemon": "^1.3.7",
     "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.15.0",
+    "cheerio": "^0.20.0",
+    "express": "^4.13.4",
+    "indico.io": "^0.9.0",
     "jwt-simple": "^0.2.0",
     "mongoose": "^4.1.0",
     "morgan": "^1.1.1",
+    "nodemon": "^1.3.7",
     "passport": "^0.2.0",
     "passport-local": "^1.0.0",
     "q": "^1.0.1",
-    "request": "^2.36.0",
-    "tough-cookie": "^2.2.2"
+    "request": "^2.69.0",
+    "tough-cookie": "^2.2.2",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "browser-sync": "^1.5.7",
