--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemon": "^1.3.7",
     "passport": "^0.2.0",
     "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "q": "^1.0.1",
     "request": "^2.69.0",
     "tough-cookie": "^2.2.2",
