--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "angular-resource": "^1.5.3",
     "angular-sanitize": "^1.5.3",
     "angular-touch": "^1.5.3",
-    "angular-ui-router": "^0.2.18"
+    "angular-ui-router": "^0.2.18",
+    "angular-ui-bootstrap": "^1.2.5"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.3"
