--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,6 @@
     "**/.*",
     "node_modules",
     "bower_components"
-
   ],
   "dependencies": {
     "angular": "^1.5.3",
@@ -18,7 +17,8 @@
     "angular-ui-bootstrap": "^1.2.5"
   },
   "devDependencies": {
-    "angular-mocks": "^1.5.3"
+    "angular-mocks": "^1.5.3",
+    "angular-bootstrap": "~1.2.5"
   },
   "appPath": "app"
 }
