--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "node": ">=0.10.0"
   },
   "scripts": {
+    "start": "./node_modules/.bin/nodemon server/express-server.js --ignore client/ --ignore node_modules/",
     "test": "./test/run.sh"
   },
   "dependencies": {
@@ -18,12 +19,14 @@
     "express": "^4.13.4",
     "indico.io": "^0.9.0",
     "jwt-simple": "^0.2.0",
+    "knex": "^0.8.6",
     "mongoose": "^4.1.0",
     "morgan": "^1.1.1",
     "nodemon": "^1.3.7",
     "passport": "^0.2.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
+    "pg": "^4.4.0",
     "q": "^1.0.1",
     "request": "^2.69.0",
     "tough-cookie": "^2.2.2",
