--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
+    "express-session": "^1.13.0",
     "indico.io": "^0.9.0",
     "jwt-simple": "^0.2.0",
     "knex": "^0.8.6",
     "mongoose": "^4.1.0",
     "morgan": "^1.1.1",
     "nodemon": "^1.3.7",
-    "passport": "^0.2.0",
+    "passport": "^0.2.2",
+    "passport-github2": "^0.1.10",
     "passport-local": "^1.0.0",
+    "passport-oauth": "^1.0.0",
     "path": "^0.12.7",
     "pg": "^4.4.0",
     "q": "^1.0.1",
