--- a/.gitignore
+++ b/.gitignore
@@ -29,5 +29,6 @@ node_modules/
 bower_components/
 notes/
 client/lib/
-server/.DS_Store 
+server/.DS_Store
 server/modules/.DS_Store
+server/_config.js
