--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
+    "image-size": "^0.5.0",
     "indico.io": "^0.9.0",
     "jwt-simple": "^0.2.0",
     "knex": "^0.8.6",
@@ -34,7 +35,6 @@
     "request": "^2.69.0",
     "tough-cookie": "^2.2.2",
     "url": "^0.11.0"
-
   },
   "devDependencies": {
     "angular": "^1.5.3",
