--- a/package.json
+++ b/package.json
@@ -51,8 +51,11 @@
     "gulp-jshint": "^1.6.3",
     "gulp-nodemon": "^1.0.4",
     "gulp-shell": "^0.2.7",
+    "jasmine-core": "^2.4.1",
     "jshint-stylish": "^0.2.0",
     "karma": "^0.13.22",
+    "karma-chrome-launcher": "^0.2.3",
+    "karma-jasmine": "^0.3.8",
     "mocha": "^2.3.3",
     "supertest": "^1.1.0",
     "supertest-as-promised": "^2.0.2"
