--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "indico.io": "^0.9.0",
     "jwt-simple": "^0.2.0",
     "knex": "^0.8.6",
+    "moment": "^2.12.0",
     "mongoose": "^4.1.0",
     "morgan": "^1.1.1",
     "nodemon": "^1.3.7",
