--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "bluebird": "^3.3.4",
     "body-parser": "^1.15.0",
+    "cookie-parser": "^1.4.1",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "image-size": "^0.5.0",
@@ -25,6 +27,7 @@
     "moment": "^2.12.0",
     "mongoose": "^4.1.0",
     "morgan": "^1.1.1",
+    "node-uuid": "^1.4.7",
     "nodemon": "^1.3.7",
     "passport": "^0.2.2",
     "passport-github2": "^0.1.10",
