--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "morgan": "^1.1.1",
     "node-uuid": "^1.4.7",
     "nodemon": "^1.3.7",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "pg": "^4.4.0",
     "q": "^1.0.1",
