--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.3.4",
     "body-parser": "^1.15.0",
+    "connect-session-knex": "^1.0.22",
     "cookie-parser": "^1.4.1",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
