--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "node-uuid": "^1.4.7",
     "nodemon": "^1.3.7",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.1.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "pg": "^4.4.0",
