--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.0",
     "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4",
     "path": "^0.12.7",
     "pg": "^4.4.0",
     "q": "^1.0.1",
