--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "clone-stats": "0.0.1",
     "expect.js": "^0.3.1",
     "gulp": "^3.8.5",
+    "gulp-db": "0.0.1",
     "gulp-if": "^1.2.5",
     "gulp-jshint": "^1.6.3",
     "gulp-nodemon": "^1.0.4",
